--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "BackEnd for the Code share app",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "test": "npm test",
+    "start": "node_modules/.bin/mocha",
     "dev": "nodemon index.js"
   },
   "repository": {
@@ -18,10 +19,13 @@
   },
   "homepage": "https://github.com/atwelleric/codesharebackend#readme",
   "dependencies": {
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.14"
+    "mocha": "^7.1.2",
+    "mongoose": "^5.9.14",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
