--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/atwelleric/codesharebackend#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
